--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -9,6 +9,7 @@
 .carusel_container {
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
   background-image: linear-gradient(
     150deg,
     #ead2f2,
@@ -187,13 +188,24 @@
   }
 }
 
+.carouserl_img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.carouserl_img img {
+  height: 350px;
+  object-fit: contain;
+}
+
 /* ================================= */
 .mostsells_container {
   display: flex;
   justify-content: space-between;
   gap: 20px;
   padding: 30px 0px;
-  background-color: #EEF0FC;
+  background-color: #eef0fc;
 }
 
 .mostsells {
@@ -297,59 +309,53 @@
 }
 
 /* ======================================== */
-.services_container{
-    display: flex;
-    justify-content: space-between;
-    padding: 20px;
-    background-color: #ECEEFA;
+.services_container {
+  display: flex;
+  justify-content: space-between;
+  padding: 20px;
+  background-color: #eceefa;
 }
 
-.icon_color1{
-    color: #00BE82;
+.icon_color1 {
+  color: #00be82;
 }
 
-.icon_color2{
-    color: #FF3C78;
+.icon_color2 {
+  color: #ff3c78;
 }
 
-.icon_color3{
-    color: #FEA16F;
+.icon_color3 {
+  color: #fea16f;
 }
 
-.icon_color4{
-    color: #A855F7;
+.icon_color4 {
+  color: #a855f7;
 }
-
-
 
 /* ============================================== */
 /* media Quary */
 
 @media (width < 1000px) {
+  .best_product_container {
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    padding: 20px 0px;
+  }
 
-    .best_product_container {
-        display: flex;
-        justify-content:center;
-        gap: 10px;
-        padding: 20px 0px;
-      }
+  .mostsells_container {
+    display: flex;
+    justify-content: center;
+    /* gap: 20px; */
+    padding: 30px 0px;
+    background-color: #eef0fc;
+  }
 
-      .mostsells_container {
-        display: flex;
-        justify-content: center;
-        /* gap: 20px; */
-        padding: 30px 0px;
-        background-color: #EEF0FC;
-      }
-
-
-      .services_container{
-        display: flex;
-        justify-content: center;
-        padding: 20px;
-        gap: 15px ;
-        background-color: #ECEEFA;
-    }
-    
-      
+  .services_container {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
+    gap: 15px;
+    background-color: #eceefa;
+  }
 }
