--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -1,1 +1,66 @@
-<p>product-details works!</p>
+<div dir="ltr" class="container mx-auto">
+  <div class="row product_details_container">
+    <div class="col-xx-6 col-xl-5 my-5 col-10 gallary">
+      <div class="row gallary_container py-4">
+        <div class="col-12 main_img">
+          <img class="" [src]="main_img" alt="" />
+        </div>
+
+        <div class="col-12 gallary_images p-2">
+          <div class="img1">
+            <img
+              class=""
+              src="../../assets/brand1.png"
+              (click)="reternsrc('../../assets/brand1.png')"
+              alt=""
+            />
+          </div>
+
+          <div class="img1">
+            <img
+              class=""
+              src="../../assets/brand2.png"
+              (click)="reternsrc('../../assets/brand2.png')"
+              alt=""
+            />
+          </div>
+
+          <div class="img1">
+            <img
+              class=""
+              src="../../assets/brand3.png"
+              (click)="reternsrc('../../assets/brand3.png')"
+              alt=""
+            />
+          </div>
+
+          <div class="img1">
+            <img
+              class=""
+              src="../../assets/brand4.png"
+              (click)="reternsrc('../../assets/brand4.png')"
+              alt=""
+            />
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xx-6 col-xl-5 col-10 product_details">
+
+
+        <div class="card text-bg-dark" style="max-width: 18rem;">
+            <div class="card-header py-2">Header</div>
+            <div class="card-body ">
+              <h5 class="card-title">Dark card title</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
+    
+
+        </div>
+
+    </div>
+    
+
+
+</div>
