--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -250,6 +250,7 @@
 }
 
 .brand_imgs_container {
+  height: 100%; 
   display: flex;
   flex-wrap: wrap;
   align-items: center;
@@ -257,12 +258,27 @@
 }
 
 .brands_imgs {
-  width: 10%;
+  width: 15%;
 }
 
 .brands_imgs img {
   width: 100%;
+  height: 100px;
+  object-fit: contain;
+  transform: scale(1);
+  transition: .5s;
+  
 }
+
+.brands_imgs img:hover{
+
+  transform: scale(1.15);
+   cursor: pointer;
+
+}
+
+
+
 /* ======================= */
 .some_offers {
   padding: 20px;
@@ -313,7 +329,12 @@
   display: flex;
   justify-content: space-between;
   padding: 20px;
+  gap: 7px ;
   background-color: #eceefa;
+}
+
+.servece{
+  height: 100%;
 }
 
 .icon_color1 {
