--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -5,7 +5,7 @@
     </div>
   <form class="row g-3 needs-validation" novalidate>
     <div class="col-7 position-relative">
-      <label for="validationTooltip01" class="form-label">Admin name</label>
+      <label for="validationTooltip01" class="form-label">First name</label>
       <input
         type="text"
         class="form-control"
@@ -17,7 +17,7 @@
     </div>
 
     <div class="col-7 position-relative">
-      <label for="validationTooltip02" class="form-label">Admin Last name</label>
+      <label for="validationTooltip02" class="form-label">Last name</label>
       <input
         type="text"
         class="form-control"
@@ -29,7 +29,7 @@
     </div>
 
     <div class="col-7 position-relative">
-      <label for="validationTooltipUsername" class="form-label">Admin Username</label>
+      <label for="validationTooltipUsername" class="form-label">Username</label>
       <div class="input-group has-validation">
         <span class="input-group-text" id="validationTooltipUsernamePrepend"
           >&#64;</span
@@ -71,7 +71,7 @@
     </div>
 
     <div class="col-7 position-relative">
-      <label for="validationTooltip01" class="form-label">Admin Img</label>
+      <label for="validationTooltip01" class="form-label">User Img</label>
       <input
         type="text"
         class="form-control"
