--- a/src/app/product-details/product-details.component.html
+++ b/src/app/product-details/product-details.component.html
@@ -3,51 +3,30 @@
     <div class="col-xx-6 col-xl-5 my-5 col-10 gallary">
       <div class="row gallary_container py-4">
         <div class="col-12 main_img">
-          <img class="" [src]="main_img" alt="" />
+          <img class="" [src]="main_img" alt="ss" />
         </div>
 
         <div class="col-12 gallary_images p-2">
-          <div class="img1">
-            <img
-              class=""
-              src="../../assets/brand1.png"
-              (click)="reternsrc('../../assets/brand1.png')"
-              alt=""
-            />
-          </div>
 
-          <div class="img1">
-            <img
-              class=""
-              src="../../assets/brand2.png"
-              (click)="reternsrc('../../assets/brand2.png')"
-              alt=""
-            />
-          </div>
+          @for (item of product_details?.images; track $index) {
 
-          <div class="img1">
-            <img
-              class=""
-              src="../../assets/brand3.png"
-              (click)="reternsrc('../../assets/brand3.png')"
-              alt=""
-            />
-          </div>
+            <div class="img1">
+              <img
+                [class]="item"
+                [src]="item"
+                [alt]="item"
+                (click)="reternsrc(item)"
+              />
+            </div>
 
-          <div class="img1">
-            <img
-              class=""
-              src="../../assets/brand4.png"
-              (click)="reternsrc('../../assets/brand4.png')"
-              alt=""
-            />
-          </div>
+          }
+
+
         </div>
       </div>
     </div>
 
     <div class="col-xx-6 col-xl-5 col-10 product_details">
-
 
         <div class="card text-bg-dark" style="max-width: 18rem;">
             <div class="card-header py-2">Header</div>
