--- a/src/app/product-details/product-details.component.css
+++ b/src/app/product-details/product-details.component.css
@@ -35,7 +35,6 @@
 }
 
 .img1 {
-  border: solid;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -45,7 +44,9 @@
 }
 
 .img1 img {
-  width: 70%;
+  width: 100%;
+  height: 150px;
+  object-fit: contain;
   cursor: pointer;
   transform: scale(1);
   transition: 0.5s;
