--- a/src/app/product-page/product-page.component.css
+++ b/src/app/product-page/product-page.component.css
@@ -4,50 +4,26 @@
   box-sizing: border-box;
 }
 
-.cont{
-  border: solid red;
-}
-
-.product_header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0px 10px;
-  border-bottom-left-radius: 12px;
-  border-bottom-right-radius: 12px;
-  background-image: linear-gradient(
-    150deg,
-    #ead2f2,
-    #d9d5fc,
-    #d8d6fc,
-    #cde1fc,
-    #d1e5f0,
-    #d6e9e3,
-    #d9eadf,
-    #d9e9dd,
-    #dbeadb,
-    #dfebd7,
-    #eae9d7,
-    #eae8d6,
-    #eee3d7,
-    #efded6,
-    #efdad7,
-    #efd8d6
-  );
-  color: white;
-}
-
-.allproduct_container{
+.allproduct_container {
   display: flex;
   align-items: start;
-  justify-content: space-between;
+  justify-content: space-evenly;
+  /* gap: 2px; */
+}
+
+.allproduct {
+  display: flex;
+  justify-content: space-around;
+  gap: 10px;
 }
 
 /* ===================================== */
 .catogury {
-  border: solid;
+  border: solid 1.5px;
   border-radius: 12px;
   padding: 10px;
+  background-color: white;
+  margin-top: 15px;
 }
 
 .type {
@@ -67,13 +43,13 @@
   border-bottom: dashed #f3f4f6;
   padding-bottom: 5px;
   font-weight: 700;
-  
 }
 
 .Categories_items {
   display: flex;
   flex-direction: column;
   gap: 20px;
+  padding: 0px 20px;
 }
 
 .item_name {
@@ -96,42 +72,81 @@
   font-weight: 600;
 }
 
+.Btns {
+  justify-content: center;
+  flex-direction: column;
+}
+
 /* ================================================== */
 
-
-.product_img {
-  position: relative;
+.product_img img {
+  height: 150px;
+  object-fit: contain;
 }
-
-.product_img button {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  font-size: 20px;
-  font-weight: 700;
-  padding: 2px 10px;
-}
-
 
 .product_data {
-  border: solid;
+  border: solid 1px;
+  border-radius: 7px;
   border-radius: 10px;
-  transform: scale(1);
-  transition: 0.7s ease;
+  width: 23%;
+  overflow: hidden;
+
 }
 
-.product_data:hover {
-  border: solid;
-  border-radius: 10px;
-  transform: scale(1.05);
-  border: solid rgb(32, 208, 32);
+.product_price{
+  background-color: #FFFFFF;
+}
+
+.rate_product{
+  color:#FFD869 ;
+  font-size: 18px;
 }
 
 
+.carusel_Btnss{
+  border: dashed  #e6e2f5 ;  
+  background-color: transparent;
+  }
+  
+  .carusel_Btnss:hover{
+    background-color: #EEEBF9;
+    }
+  
+  
+  .carusel_Btnss span{
+    color: #5C3DC3;
+    margin: 0px auto;
+    }
+
+    .carusel_Btnss i{
+      color: red;
+      margin: 0px auto;
+
+      }
+    /* ============================== */
+
+    .Rate .card {
+      display: flex;
+      border: none;
+      flex-direction: column;
+      width: 100%;
+      gap: 20px;
+      text-align: center;
+    }
 
 /* ======================================================== */
 /* media quary */
-@media (width <900px) {
+@media (width < 1000px) {
+  .product_data {
+    width: 30%;
+  }
+}
+
+@media (width<800px) {
+  .product_data {
+    width: 45%;
+  }
+
   .product_header {
     display: flex;
     flex-direction: column;
@@ -139,5 +154,11 @@
     align-items: flex-start;
     padding: 10px;
     gap: 10px;
+  }
+}
+
+@media (width<600px) {
+  .product_data {
+    width: 90%;
   }
 }
