--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,23 @@
 
-<div class="container-fluid">
-  <div class="row carusel_container py-4">
+<div class="container-fluid ">
+  <div class="row carusel_container ">
     <div class="col-xxl-5 col-xl-5 col-10 data">
-      <h5 class="offer">الشحن مجاني - للطلبات التي تزيد قيمتها عن 100 دولار</h5>
+      <h1 class="offer">الشحن مجاني - للطلبات التي تزيد قيمتها عن 100 دولار</h1>
 
-      <h1>
+      <h1 class="saless">
         عرض لفترة محدودة!
-        <span class="sale"> عرض حتى </span>
-        <span class="sale2">50% خصم</span>
+        <br>
+        <div class="sales">
+          <span class="sale"> عرض حتى </span>
+          <span class="sale2">50% خصم</span>
+
+        </div>
       </h1>
 
-      <h5>
+      <h3>
         قدمنا نموذجًا جديدًا للتسوق عبر الإنترنت للبقالة والتوصيل المريح إلى
         المنازل.
-      </h5>
+      </h3>
 
       <button (click)="redirect4()" type="button" class="btn carusel_btn btn-outline-secondary w-25 p-2 my-5">
         انظر في المتجر
@@ -50,8 +54,8 @@
 
 <div class="container-fluid mx-auto">
   
-  <div class="row mostsells_container mx-4">
-    <div class="col-10 col-xl-5 col-xxl-5 mostsells">
+  <div class="row mostsells_container">
+    <div class="mostsells">
       <div class="product_data">
         <h1>! New Collection</h1>
         <p class="my-3">Launch Offer 15% Off!</p>
@@ -65,7 +69,7 @@
       </div>
     </div>
   
-    <div class="col-10 col-xl-5 col-xxl-5 mostsells">
+    <div class="mostsells">
       <div class="product_data">
         <h1>! New Collection</h1>
         <p class="my-3">Launch Offer 15% Off!</p>
@@ -114,7 +118,7 @@
   </div>
   
   <div class="container-fluid some_offers">
-    <h2>بعض عروضنا</h2>
+    <h2 class="some_offersh">بعض عروضنا</h2>
   
     <div class="row best_product_container row-cols-1 row-cols-md-3 g-4 ">
       @for (product of productcenter.slice(0,8); track $index) {
@@ -128,9 +132,10 @@
               alt="..."
             />
             <div class="card-body my-4">
-              <h5 class="card-title">{{ product.title }}</h5>
+              <h2 class="card-title">{{ product.title }}</h2>
+              <h3 class="card-title">${{ product.price }}</h3>
               <div class="rating">
-
+                
                 <ngb-rating  [(rate)]="product.rating" [readonly]="true" [max]="5"></ngb-rating>
               </div>
 
@@ -150,7 +155,7 @@
   
   <div class="services">
     <div class="row services_container">
-      <div class="col-10 col-xxl-3 col-xl-3 col-md-5">
+      <div class="service">
         <div class="card flex justify-content-center">
           <p-card header="">
             <i class="pi pi-truck icon_color1" style="font-size: 2rem"></i>
@@ -165,7 +170,7 @@
         </div>
       </div>
   
-      <div class="col-10 col-xxl-3 col-xl-3 col-md-5">
+      <div class="service">
         <div class="card flex justify-content-center">
           <p-card header="">
             <i class="pi pi-server      icon_color3    " style="font-size: 2rem"></i>
@@ -179,11 +184,24 @@
         </div>
       </div>
   
-      <div class="col-10 col-xxl-3 col-xl-3 col-md-5">
+      <div class="service">
         <div class="card flex justify-content-center">
           <p-card header="">
             <i class="pi pi-credit-card icon_color4" style="font-size: 2rem"></i>
   
+            <h5>Secure Payment</h5>
+            <p class="m-0">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
+              sed consequuntur
+            </p>
+          </p-card>
+        </div>
+      </div>
+
+      <div class="service">
+        <div class="card flex justify-content-center">
+          <p-card header="">
+            <i class="fa-solid fa-truck-fast icon_color2"style="font-size: 2rem" ></i>
             <h5>Secure Payment</h5>
             <p class="m-0">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore
