--- a/src/app/second-header/second-header.component.html
+++ b/src/app/second-header/second-header.component.html
@@ -5,7 +5,7 @@
     <div class="row ">
 
       <div class="Companyandsearch col-6 col-xxl-4 ">
-        <h4>Company Logo</h4>
+        <h4 class="m-0 ">Company Logo</h4>
 
         <div class="search w-50">
           <p-iconField iconPosition="right">
@@ -36,17 +36,17 @@
     
             <div class="offcanvas offcanvas-start" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
               <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasExampleLabel">User Options</h5>
+                <h2 class="offcanvas-title" id="offcanvasExampleLabel">User Options</h2>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>
               <div class="offcanvas-body ">
     
-                <div class="nav_btns">
+                <div class="nav_btns px-2">
     
                   <button type="button" (click)="redirect()" class="btn  btn-outline-info w-100 ">Profile <i class="pi pi-user"></i>              </button>
                   <button type="button" (click)="redirect2()" class="btn  btn-outline-secondary w-100 "> invoice <i class="pi pi-file"></i></button>
                   <button type="button" (click)="redirect3()" class="btn  btn-outline-danger w-100 ">Sign out <i class="pi pi-sign-out"></i></button>
-                  <button (click)="redirect5()" type="button" class="btn btn-outline-secondary px-3 py-2">User</button>
+                  <button (click)="redirect5()" type="button" class="btn btn-outline-success px-3 py-2">Register</button>
                   <button (click)="redirect6()" type="button" class="btn btn-outline-secondary px-3 py-2">Log in</button>
           
                 </div>
@@ -74,7 +74,7 @@
     
     <div class="offcanvas offcanvas-start" data-bs-scroll="true" tabindex="-1" id="offcanvasWithBothOptions" aria-labelledby="offcanvasWithBothOptionsLabel">
       <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Category </h5>
+        <h2 class="offcanvas-title" id="offcanvasWithBothOptionsLabel">Category </h2>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
       </div>
       <div class="offcanvas-body">
@@ -84,7 +84,7 @@
 
           <div class="btn-group dropend w-50">
             <button type="button" class="btn btn-secondary dropdown-toggle d-flex w-25  " data-bs-toggle="dropdown" aria-expanded="false">
-                <p>{{ item }}</p>
+                <p class="item m-0">{{ item }}</p>
             </button>
             <ul class="dropdown-menu">
               @for (product of products; track $index) {
